--- a/cadastro-funcionario/src/cadastro.css
+++ b/cadastro-funcionario/src/cadastro.css
@@ -1,28 +1,42 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+    
 }
 #titulo{
-    font-family: sans-serif;
+    font-size: 36px;
     color: black;
-    margin-left: 7%;
+    text-align: center;
+   
 }
 #subtitulo {
     font-family: sans-serif;
     color: black;
-    margin-left: 5%;
+    text-align: center;
 }
 fieldset{
-    border: 0;
+    width: 420px;
+    height: 620px;
+    background-color: transparent;
+    border: 2px solid rgb(255, 255, 255, 0.2);
+    border-radius: 10px;
+    color: black;
+    padding: 30px 40px;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.2);
 }
 body{
-    background-color: #b2d9f7;
-    font-family: sans-serif;
-    font-size: 1em;
+    display: flex;
+    align-items: center;
     color: black;
-    margin-left: 40%;
-    margin-top: 2%;
     justify-content: center;
+    min-height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background: url(#);
 }
 
 input, select, button{
@@ -32,13 +46,23 @@ input, select, button{
     margin-bottom: 1em;
 }
 .campo label{
-    margin-bottom: 0.0em;
-    display: block;
+   /* position: relative;*/
+    margin-bottom: 0.2em;
+   display: block;
 }
 
-.campo input[type="text"], .campo input[type="image"], .campo select{
-    padding: 0.2em;
-    border: 1px solid;
+fieldset.grupo .campo{
+    width: 100%;
+    right: 100%;
+}
+
+.campo input[type="text"], .campo select{
+    width: 100%;
+    height: 100%;
+    border-radius: 40px;
+    background-color:transparent;
+    padding: 5px 10px 5px 5px;
+    border: 2px solid rgb(255, 255, 255, 0.2);
     box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.2);
     display: block;
 }
@@ -46,12 +70,17 @@ input, select, button{
     padding-right: 1em;
 }
 
+.campo input[type="text"]{
+    align-items: center;
+}
+    
+
 /*focus tag para deixar campos em evidencia*/
 .campo input:focus, .campo select:focus{
     background: #E0E0F8;
 }
 .botão{
-    font-size: 1.1em;
+    font-size: 1.2em;
     border: 0;
     margin-bottom: 1em;
     color: black;
@@ -59,8 +88,8 @@ input, select, button{
     box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.2);
     text-shadow: 1px 1px 1px rgb(0, 0, 0, 0.5);
     position: absolute;
-    top: 60%;
-    left: 48%;
+    top: 85%;
+    left: 50%;
     margin-right: -50%;
     transform:translate(-50%, -50%);
 }
