--- a/cadastro-funcionario/src/cadastro.css
+++ b/cadastro-funcionario/src/cadastro.css
@@ -36,7 +36,7 @@ body{
     min-height: 100vh;
     background-size: cover;
     background-position: center;
-    background: url(#);
+    background: url('./img/imgblue.png');
 }
 
 input, select, button{
