--- a/cadastro-funcionario/src/cadastro.css
+++ b/cadastro-funcionario/src/cadastro.css
@@ -80,22 +80,21 @@ fieldset.grupo .campo{
     background: #E0E0F8;
 }
 .botão{
-    font-size: 1.2em;
-    border: 0;
-    margin-bottom: 1em;
-    color: black;
-    padding: 0.2em 0.6em;
-    box-shadow: 2px 2px 2px rgb(0, 0, 0, 0.2);
-    text-shadow: 1px 1px 1px rgb(0, 0, 0, 0.5);
-    position: absolute;
-    top: 85%;
-    left: 50%;
-    margin-right: -50%;
-    transform:translate(-50%, -50%);
+    width: 100%;
+    height: 50px;
+    border:none;
+    border-radius: 40px;
+    /*cursor pointer para aparecer a mão no cursor ao passar no botão*/
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: 600;
+    box-shadow:0 0 10px rgba(0, 0, 0, 0.1)
+    
 }
 /*tag hover deixar em evidencia o botão ao passar o mouse*/
 .botão:hover{
     background: #ccbbff;
     box-shadow: inset 2px 2px 2px rgb(0, 0, 0, 0.2);
     text-shadow: none;
+    transition: 0.5s;
 }
